# spotify-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  pre-commit-autoupdate.yml
spotify_rag/docs/: PLAN.md
spotify_rag/domain/: __init__.py  search.py  track.py  user.py
spotify_rag/infrastructure/: __init__.py
spotify_rag/infrastructure/genius/: __init__.py  client.py
spotify_rag/infrastructure/llm/: client.py
spotify_rag/infrastructure/spotify/: auth_manager.py  client.py
spotify_rag/infrastructure/vectordb/: repository.py
spotify_rag/injections/: container.py
spotify_rag/injections/containers/: services.py
spotify_rag/services/: library_sync.py  search.py  track_analysis.py
spotify_rag/ui/: app.py  config.py
spotify_rag/ui/components/: __init__.py  library.py  search.py  sidebar.py  sync.py
spotify_rag/utils/: logger.py  settings.py
spotify_vibe_searcher/: __init__.py  main.py
spotify_vibe_searcher/docs/: PLAN.md
spotify_vibe_searcher/domain/: __init__.py  search.py  sync.py  track.py
spotify_vibe_searcher/infrastructure/: __init__.py
spotify_vibe_searcher/infrastructure/genius/: client.py
spotify_vibe_searcher/infrastructure/llm/: __init__.py  client.py
spotify_vibe_searcher/infrastructure/spotify/: __init__.py  auth_manager.py  client.py
spotify_vibe_searcher/infrastructure/vectordb/: __init__.py  repository.py
spotify_vibe_searcher/injections/: __init__.py  container.py
spotify_vibe_searcher/injections/containers/: __init__.py  infrastructure.py  services.py
spotify_vibe_searcher/services/: __init__.py  library_sync.py  search.py  track_analysis.py
spotify_vibe_searcher/ui/: app.py
spotify_vibe_searcher/ui/components/: __init__.py  footer.py  landing.py  library.py  profile.py  search.py  sync.py
spotify_vibe_searcher/ui/styles/: styles.css
spotify_vibe_searcher/utils/: __init__.py  logger.py  settings.py
tests/: conftest.py  conftest_polyfactory.py
tests/domain/track/: conftest.py  test_track.py
tests/domain/user/: test_user.py
tests/helpers/: auth.py
tests/infrastructure/genius/: conftest.py  test_genius_client.py
tests/infrastructure/llm/: conftest.py  test_llm_client.py
tests/infrastructure/spotify/auth_manager/: conftest.py  test_auth_manager.py
tests/infrastructure/spotify/client/: conftest.py  test_spotify_client.py
tests/infrastructure/vectordb/: conftest.py  test_vectordb_repository.py
tests/infrastructure/vectordb/cassettes/test_vectordb_repository/: test_count_tracks.yaml  test_delete_multiple_tracks.yaml  test_delete_tracks.yaml  test_get_all_tracks.yaml  test_search_by_vibe_empty_collection.yaml  test_search_by_vibe_finds_matching_tracks.yaml  test_search_by_vibe_returns_correct_number_of_results.yaml  test_search_by_vibe_returns_metadata.yaml  test_track_exists.yaml
tests/injections/: test_container.py
tests/services/: conftest.py  test_library_sync.py
tests/services/cassettes/test_library_sync/: test_sync_library_calls_genius_client_for_each_track.yaml  test_sync_library_calls_spotify_client.yaml  test_sync_library_progress_increments.yaml  test_sync_library_tracks_with_and_without_lyrics.yaml  test_sync_library_yields_progress_and_tracks.yaml
tests/services/library_sync/: conftest.py  test_library_sync.py
tests/services/library_sync/cassettes/test_library_sync/: test_sync_library_fetches_lyrics_for_tracks.yaml  test_sync_library_skips_existing_tracks.yaml
tests/services/search/: conftest.py  test_search.py
tests/services/search/cassettes/test_search/: test_empty_results_returns_valid_domain_model.yaml  test_search_by_vibe_returns_search_results_domain_model.yaml  test_search_result_items_have_correct_structure.yaml  test_search_results_has_typed_attributes.yaml  test_service_delegates_to_repository.yaml  test_similarity_score_conversion_from_distance.yaml
tests/services/track_analysis/: conftest.py  test_track_analysis.py
tests/utils/logger/: conftest.py  test_logger.py
